--- a/css/main.css
+++ b/css/main.css
@@ -2050,20 +2050,20 @@ border: 1px solid #818A8A;
   z-index: 1;
 }
 
-table thead tr {
+.pricelist__table table thead tr {
   background: #818A8A;
   
 }
 
-table tr:last-child td:first-child {
+.pricelist__table table tr:last-child td:first-child {
     border-bottom-left-radius: 8px;
 }
 
-table tr:last-child td:last-child {
+.pricelist__table table tr:last-child td:last-child {
     border-bottom-right-radius: 8px;
 }
 
-table thead tr th {
+.pricelist__table table thead tr th {
   font-family: 'Cormorant Garamond';
 font-style: normal;
 font-weight: bold;
@@ -2077,10 +2077,10 @@ font-feature-settings: 'pnum' on, 'lnum' on;
 
 color: #FFFFFF;
 }
-table tbody {
+.pricelist__table table tbody {
   background-color: #fff;
 }
-table tbody tr td {
+.pricelist__table table tbody tr td {
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
@@ -2093,45 +2093,45 @@ padding: 30px 20px;
 
 color: #1E1E20;
 }
-table  {
+.pricelist__table table  {
   border-color: #818A8A;
 }
-  table {
+.pricelist__table  table {
   border-collapse: collapse;
 }
-table td {
+.pricelist__table table td {
   border: 1px solid #818A8A; 
 }
-table th {
+.pricelist__table table th {
   border: 1px solid #979F9F; 
 }
-table tr:first-child td {
+.pricelist__table table tr:first-child td {
   border-top: 0;
 }
-table tr td:first-child {
+.pricelist__table table tr td:first-child {
   border-left: 0;
 }
-table tr:last-child td {
+.pricelist__table table tr:last-child td {
   border-bottom: 0;
 }
-table tr td:last-child {
+.pricelist__table table tr td:last-child {
   border-right: 0;
 }
 
-table tr:first-child th {
+.pricelist__table table tr:first-child th {
   border-top: 0;
 }
-table tr th:first-child {
+.pricelist__table table tr th:first-child {
   border-left: 0;
 }
-table tr:last-child th {
+.pricelist__table table tr:last-child th {
   border-bottom: 0;
 }
-table tr th:last-child {
+.pricelist__table table tr th:last-child {
   border-right: 0;
 }
 
-table thead th {
+.pricelist__table table thead th {
 border-color: #979F9F;
 
 }
@@ -2271,9 +2271,6 @@ color: #FFFFFF;
 }
 
 
-.promoblock {
-  padding-bottom: 30px;
-}
 .pricelist_mobile {
   display: none;
 }
@@ -2411,6 +2408,22 @@ a.btn_border_white:hover {
 
 .categories_type2  .category__wrapper:hover .category__content {
     bottom: 0;
+}
+
+.pageform .pagetitle h2 {
+  margin-bottom: 30px;
+}
+
+.pageform .pagetitle  {
+  margin-bottom: 40px;
+}
+.pageform__info p {
+  font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 130%;
+    text-align: center;
+    color: #818A8A;
 }
 
 @media (max-width: 1200px) {
@@ -3403,9 +3416,29 @@ a.back.btn_border {
   top: -10px;
     right: -10px;
 }
+
+mark {
+  white-space: nowrap;
+}
+.text_hidden_mobile  {
+  height: 288px;
+  overflow: hidden;
+  margin-bottom: 24px;
+}
+.row.categories.categories_type2 {
+  margin-bottom: 40px;
+}
+
 }
 
 @media (max-width: 767px) {
+
+.promoblock__buttons > a {
+   margin-left: auto !important;
+  margin-right: auto !important;
+      width: 100%;
+    text-align: center;
+}
   .services .services__item:last-child {
     margin-bottom: 0;
   }
@@ -3607,5 +3640,35 @@ color: #818A8A;
       overflow-x: auto;
 
     }
+
+    
+.category__links {
+  height: initial;
+  opacity: 1;
+}
+.category__links  a.btn_border_white {
+ display: none;
+}
+.category__links a.btn_main {
+  border: 1px solid #fff;
+    color: #fff;
+    background: none;
+    font-size: 14px;
+    width: 142px;
+    max-width: 142px;
+    min-width: 142px;
+}
+.category__wrapper {
+      background-image: linear-gradient(
+1.31deg, rgba(28, 12, 3, 0.76) 27.18%, rgba(28, 12, 3, 0.29) 98.95%);
+}
+.category__price {
+  font-size: 18px;
+line-height: 120%;
+margin: 8px 0px 12px 0;
+}
+.category_large .category__wrapper {
+  padding-top: 51%;
+}
     
 }
